# PromptLedger

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  PromptLedger Spec.md  RAILWAY_INTEGRATION.md  README.md  TEST_README.md  TODO.md  alembic.ini  docker-compose.yml  entrypoint.sh  myclaude.md  prompt_registry_execution_service_final_design_spec.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_prompt_mode.py  98be36776ed5_add_spans_table_for_workflow_tracking.py
examples/: api_demo.ipynb
feature_requests/: FR-001-workflow-execution-tracking.md  FR-002-PromptLedger-Railway-Templates.md  RailwayTemplates.md
rules/: README.md  code-review.md  development.md  git-workflow.md  tdd.md
scripts/: __init__.py  dev.ps1  seed_models.py
src/prompt_ledger/: settings.py
src/prompt_ledger/api/: main.py
src/prompt_ledger/db/: database.py
src/prompt_ledger/models/: __init__.py  execution.py  model.py  prompt.py  span.py
src/prompt_ledger/services/: execution.py  prompt_service.py  providers.py
template/: README.md  button.json  railway.toml
template/prompt-ledger-api/: Dockerfile  alembic.ini  pyproject.toml  railway.toml  requirements.txt
template/prompt-ledger-worker/: Dockerfile  railway.toml  requirements.txt
template/sample-app/: main.py  requirements.txt
tests/: __init__.py  conftest.py  test_models.py  test_prompts.py  test_tdd_example.py
tests/integration/: test_code_prompts_api.py
tests/unit/: test_models_prompt_mode.py  test_prompt_service.py  test_span_model.py
(+17 files in other folders)
